syntax = "proto3";

import "optional_types.proto";
option go_package = "github.com/alfssobsd/arch-radar/archradar-grpc";


service ServiceRadarGrpcService {
  rpc GetServices (ListServicesRequest) returns (ListServicesResponse) {}
}

message ListServicesRequest {
  string lang_id = 1;
}


message ServiceResponse {
  OptionalTypes.UUIDOptional serviceUUID = 1;
  string Title = 2;
}

message ListServicesResponse {
  repeated ServiceResponse items = 1;
}
